--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "anime-streaming",
-  "version": "0.1.0",
+  "name": "animeid",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "next": "14.0.0",
+    "@headlessui/react": "^1.7.20",
+    "@heroicons/react": "^2.1.1",
+    "axios": "^1.7.2",
+    "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-player": "3.0.0"
+    "react-player": "3.0.0",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "autoprefixer": "10.4.14",
-    "postcss": "8.4.21",
-    "tailwindcss": "3.4.7",
     "eslint": "8.40.0",
-    "eslint-config-next": "14.0.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "8.4.31",
+    "tailwindcss": "3.4.13",
+    "prettier": "3.3.3"
   }
 }
