--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "swr": "^2.2.4"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.14",
-    "eslint": "8.40.0",
-    "eslint-config-next": "14.1.0",
-    "postcss": "8.4.31",
-    "tailwindcss": "3.4.13",
-    "prettier": "3.3.3"
-  }
+  "autoprefixer": "10.4.14",
+  "eslint": "8.40.0",
+  "eslint-config-next": "14.1.0",
+  "postcss": "8.4.31",
+  "tailwindcss": "3.4.13",
+  "prettier": "3.3.3",
+  "typescript": "^5.4.5",
+  "@types/react": "^18.2.33",
+  "@types/node": "^20.11.30"
 }
