--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@headlessui/react": "1.7.18",
-    "@heroicons/react": "2.1.1",
-    "axios": "1.7.2",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "axios": "^1.7.2",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-player": "3.0.0",
-    "swr": "2.2.4"
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "autoprefixer": "10.4.14",
@@ -26,8 +26,8 @@
     "postcss": "8.4.31",
     "tailwindcss": "3.4.13",
     "prettier": "3.3.3",
-    "typescript": "5.4.5",
-    "@types/react": "18.2.33",
-    "@types/node": "20.11.30"
+    "typescript": "^5.4.5",
+    "@types/react": "^18.2.33",
+    "@types/node": "^20.11.30"
   }
 }
